Fixed spacing on category buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,6 +87,8 @@
 }
 
 .category-btn {
+  margin-bottom: 4px;
+
   .glyphicon {
     margin-right: 5px;
   }
